--- a/static_html/index.html
+++ b/static_html/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+      body {
+        background-color: black;
+        color: green;
+      }
+    </style>
     <title>Static Page</title>
 </head>
 <body>
     yes it worked
+    <img src="wally.png">
 </body>
 </html>
