fixed some lint issues and updated the static web page.

--- a/static_html/index.html
+++ b/static_html/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <style>
       body {
         background-color: black;
@@ -11,9 +11,9 @@
       }
     </style>
     <title>Static Page</title>
-</head>
-<body>
+  </head>
+  <body>
     yes it worked
-    <img src="wally.png">
-</body>
+    <img src="wally.png" />
+  </body>
 </html>
