--- a/static_html/index.html
+++ b/static_html/index.html
@@ -4,16 +4,232 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>jrj.io</title>
     <style>
+      :root {
+        --bg: #000000;
+        --fg: #33ff33;
+      }
+      * {
+        box-sizing: border-box;
+      }
+      html,
       body {
-        background-color: black;
-        color: green;
+        margin: 0;
+        height: 100%;
+        background: var(--bg);
+        color: var(--fg);
+        font-family: "Fira Code", "Courier New", monospace;
+        font-size: 16px;
+        line-height: 1.4;
+        overflow: hidden;
+      }
+      #terminal {
+        position: relative;
+        width: 100%;
+        height: 100%;
+        padding: 20px;
+        overflow-y: auto;
+        white-space: pre-wrap;
+      }
+      #terminal::before {
+        content: "";
+        position: absolute;
+        inset: 0;
+        pointer-events: none;
+        background: repeating-linear-gradient(
+          180deg,
+          rgba(0, 0, 0, 0) 0 2px,
+          rgba(0, 0, 0, 0.05) 2px 3px
+        );
+      }
+      #terminal.flicker {
+        animation: flicker 0.15s steps(1) infinite;
+      }
+      @keyframes flicker {
+        0%,
+        100% {
+          opacity: 0.97;
+        }
+        50% {
+          opacity: 1;
+        }
+      }
+      .cursor {
+        display: inline-block;
+        width: 8px;
+        background: var(--fg);
+        margin-left: 2px;
+        animation: blink 1s steps(2, start) infinite;
+      }
+      @keyframes blink {
+        0%,
+        49% {
+          opacity: 1;
+        }
+        50%,
+        100% {
+          opacity: 0;
+        }
+      }
+      .clickable {
+        text-decoration: underline;
+        cursor: pointer;
+      }
+      a {
+        color: inherit;
+        text-decoration: underline;
       }
     </style>
-    <title>Static Page</title>
   </head>
   <body>
-    yes it worked
-    <img src="wally.png" />
+    <div id="terminal" class="flicker" tabindex="0"></div>
+    <script>
+      (() => {
+        const term = document.getElementById("terminal");
+        const charDelay = 18;
+
+        const COMMANDS = {
+          help: () =>
+            printLines([
+              "Available commands:",
+              "  about   – info about this service",
+              "  clear   – clear the screen",
+              "  help    – show this list",
+              "  open <url>/<shortcode> – open url in new tab",
+            ]),
+          what: () =>
+            printLines(
+              [
+                "JRJ's personal link shortener",
+                "Built with Rust 🦀",
+                "Source: https://github.com/jrj/redirective",
+                "Type 'help' to explore.",
+              ].map(linkify),
+            ),
+          about: () =>
+            printLines(
+              [
+                "Joseph R. Jones (JRJ)",
+                "Scruffy-looking nerd herder",
+                "and world's foremost expert",
+                "in self-proclaimed thought leadership",
+                "https://jrj.org",
+              ].map(linkify),
+            ),
+          contact: () =>
+            printLines(
+              [
+                "this is kind of one of those “if you know, you know” situations.",
+                "If I wanted you to contact me you would know how to contact me.",
+                "",
+                "That said, JRJ...",
+                " - Is on twitter/X as @jrj (but doesn’t really post anymore)",
+                " - Used to blog at https://blog.jrj.org (but the site is archived)",
+                " - Is on LinkedIn -> https://jrj.io/in (but doesn’t accept unknown connections",
+              ].map(linkify),
+            ),
+          clear: () => {
+            term.innerHTML = "";
+            newPrompt();
+          },
+          open: (args) => {
+            if (args[0]) window.open(args[0], "_blank");
+            else printLines(["Usage: open <url>"]);
+          },
+        };
+
+        let inputSpan = null;
+        let cursorSpan = null;
+
+        function scrollBottom() {
+          term.scrollTop = term.scrollHeight;
+        }
+
+        function typeChars(str, cb) {
+          let i = 0;
+          (function type() {
+            if (i < str.length) {
+              inputSpan.textContent += str[i++];
+              setTimeout(type, charDelay);
+            } else if (cb) cb();
+          })();
+        }
+
+        function linkify(text) {
+          return text.replace(
+            /(https?:\/\/[\w\-.~:?#[\]@!$&'()*+,;=\/]+)/g,
+            '<a href="$1" target="_blank">$1</a>',
+          );
+        }
+
+        function print(line = "") {
+          const div = document.createElement("div");
+          div.innerHTML = line;
+          term.appendChild(div);
+        }
+
+        function printLines(lines) {
+          lines.forEach((l) => print(l));
+          newPrompt();
+        }
+
+        function runCommand(cmdLine) {
+          const parts = cmdLine.trim().split(/\s+/);
+          const cmd = parts[0].toLowerCase();
+          const args = parts.slice(1);
+          if (COMMANDS[cmd]) COMMANDS[cmd](args);
+          else if (cmd) print("Command not found: " + cmd);
+        }
+
+        function newPrompt() {
+          const wrapper = document.createElement("div");
+          wrapper.innerHTML = `<span class="prompt">$ </span><span id="input"></span>`;
+          inputSpan = wrapper.querySelector("#input");
+          cursorSpan = document.createElement("span");
+          cursorSpan.className = "cursor";
+          wrapper.appendChild(cursorSpan);
+          term.appendChild(wrapper);
+          scrollBottom();
+        }
+
+        function handleKey(e) {
+          if (!inputSpan) return;
+          e.preventDefault();
+          if (e.key === "Backspace") {
+            inputSpan.textContent = inputSpan.textContent.slice(0, -1);
+          } else if (e.key === "Enter") {
+            const cmdLine = inputSpan.textContent;
+            cursorSpan.remove();
+            inputSpan = null;
+            cursorSpan = null;
+            runCommand(cmdLine);
+          } else if (e.key.length === 1) {
+            inputSpan.textContent += e.key;
+          }
+          scrollBottom();
+        }
+
+        function boot() {
+          print("jrj.io redirective shell v1.0");
+          print("Type 'help' for a list of commands.");
+          newPrompt();
+          setTimeout(() => typeChars("about", () => {}), 300);
+        }
+
+        term.addEventListener("click", () => term.focus());
+        document.addEventListener("keydown", handleKey);
+        term.focus();
+
+        document.addEventListener("click", (e) => {
+          const el = e.target.closest(".clickable");
+          if (el) {
+            runCommand(el.dataset.command || el.textContent);
+          }
+        });
+
+        boot();
+      })();
+    </script>
   </body>
 </html>
