--- a/static_html/index.html
+++ b/static_html/index.html
@@ -9,6 +9,7 @@
     :root {
       --bg: #000000;
       --fg: #33ff33;
+      --char-width: 8px; /* Approximate width of a monospace character */
     }
     * { box-sizing: border-box; }
     html, body {
@@ -17,7 +18,7 @@
       background: var(--bg);
       color: var(--fg);
       font-family: "Fira Code", "Menlo", "Consolas", monospace;
-      font-size: 20px;
+      font-size: calc(100vw / 60); /* Dynamically adjust font size */
       line-height: 1.4;
       overflow: hidden;
     }
@@ -36,19 +37,26 @@
       pointer-events: none;
       background: repeating-linear-gradient(180deg, rgba(0,0,0,0) 0 2px, rgba(0,0,0,0.05) 2px 3px);
     }
-    #terminal.flicker { animation: flicker 0.15s steps(1) infinite; }
+    #terminal.flicker {
+      animation: flicker 0.15s steps(1) infinite;
+    }
     @keyframes flicker {
-      0%, 100% { opacity: 0.97; }
-      50% { opacity: 1; }
+      0%, 100% { opacity: 0.93; }
+      60% { opacity: 1; }
     }
     .cursor {
       display: inline-block;
-      width: 8px;
+      width: 0.6em; /* Match the width of a single character */
+      height: 1em; /* Match the height of a single line */
       background: var(--fg);
-      margin-left: 2px;
+      vertical-align: bottom; /* Align with text baseline */
+      transform: translateY(-20%); /* Nudge cursor slightly upward */
       animation: blink 1s steps(2, start) infinite;
     }
-    @keyframes blink { 0%, 49% { opacity: 1; } 50%, 100% { opacity: 0; } }
+    @keyframes blink {
+      0%, 49% { opacity: 1; }
+      50%, 100% { opacity: 0; }
+    }
     .clickable { text-decoration: underline; cursor: pointer; }
     a { color: inherit; text-decoration: underline; }
   </style>
@@ -58,7 +66,7 @@
   <script>
     (() => {
       const term = document.getElementById("terminal");
-      const charDelay = 200;
+      const charDelay = 3;
 
       const COMMANDS = {
         help: () => printLines([
@@ -66,22 +74,26 @@
           "  what             – info about this service",
           "  about            – about JRJ",
           "  contact          – how to reach JRJ",
+          "  wally            - who's a good boy?",
           "  clear            – clear the screen",
           "  help             – show this list",
-          "  open [shortcode] – open url in new tab"
+          "  open [shortcode] – open url in new tab",
+          " ",
         ]),
         what: () => printLines([
           "JRJ's personal link shortener",
           "Built with Rust 🦀",
           "Source: https://github.com/jrj/redirective",
-          "Type 'help' to explore."
+          "Type 'help' to explore.",
+          " ",
         ].map(linkify)),
         about: () => printLines([
           "Joseph R. Jones (JRJ)",
           "Scruffy-looking nerd herder",
           "and world's foremost expert",
           "in self-proclaimed thought leadership",
-          "https://jrj.org"
+          "https://jrj.org",
+          " ",
         ].map(linkify)),
         contact: () => printLines([
           "This is kind of one of those \"if you know, you know\" situations.",
@@ -90,9 +102,16 @@
           "That said, JRJ...",
           " - Is on twitter/X as @jrj (but doesn’t really post anymore)",
           " - Used to blog at https://blog.jrj.org (but the site is archived)",
-          " - Is on LinkedIn -> https://jrj.io/in (but doesn’t accept unknown connections)"
+          " - Is on LinkedIn -> https://jrj.io/in (but doesn’t accept unknown connections)",
+          " ",
         ].map(linkify)),
-        clear: () => { term.innerHTML = ""; newPrompt(); },
+        wally: () => printLines([
+          "Who's a good boy?",
+          "<a href=wally.png><img src=wally.png width=200></a>",
+          "Wally's a good boy!",
+          " ",
+        ].map(linkify)),
+        clear: () => { term.innerHTML = "jrj.io redirective shell v1.0<br>Type 'help' for a list of commands."; newPrompt(); },
         open: (args) => {
           if(args[0]) {
             window.open(args[0], "_blank");
@@ -112,26 +131,41 @@
       function typeChars(str, cb) {
         let i = 0;
         (function type() {
-          if(i < str.length) {
+          if (i < str.length) {
             inputSpan.textContent += str[i++];
             setTimeout(type, charDelay);
-          } else if(cb) cb();
+          } else if (cb) cb();
         })();
       }
 
       function linkify(text) {
-        return text.replace(/(https?:\/\/[\w\-.~:?#[\]@!$&'()*+,;=\/]+)/g, '<a href="$1" target="_blank">$1</a>');
+        return text.replace(/(https?:\/\/[\w\-._~:/?#[\]@!$&'()*+,;=%]+)/g, '<a href="$1" target="_blank">$1</a>');
       }
 
-      function print(line = "") {
+      function print(line = "", cb) {
         const div = document.createElement("div");
-        div.innerHTML = line;
+        div.innerHTML = line; // Render HTML content properly
         term.appendChild(div);
+
+        let i = 0;
+        (function type() {
+          if (i < line.length) {
+            div.innerHTML = line.slice(0, i + 1); // Update content progressively
+            i++;
+            setTimeout(type, charDelay);
+          } else if (cb) cb();
+        })();
       }
 
       function printLines(lines) {
-        lines.forEach(l => print(l));
-        newPrompt();
+        let i = 0;
+        (function printNext() {
+          if (i < lines.length) {
+            print(lines[i++], () => setTimeout(printNext, 100)); // Wait for the current line to finish before starting the next
+          } else {
+            newPrompt();
+          }
+        })();
       }
 
       function runCommand(cmdLine) {
@@ -152,7 +186,7 @@
         inputSpan = wrapper.querySelector("#input");
         cursorSpan = document.createElement("span");
         cursorSpan.className = "cursor";
-        wrapper.appendChild(cursorSpan);
+        wrapper.appendChild(cursorSpan); // Append cursor after input
         term.appendChild(wrapper);
         scrollBottom();
       }
@@ -160,30 +194,27 @@
       function handleKey(e) {
         if (!inputSpan) return;
         e.preventDefault();
-        if(e.key === "Backspace") {
+        if (e.key === "Backspace") {
           inputSpan.textContent = inputSpan.textContent.slice(0, -1);
-        } else if(e.key === "Enter") {
+        } else if (e.key === "Enter") {
           const cmdLine = inputSpan.textContent;
-          cursorSpan.remove();
+          cursorSpan.remove(); // Remove cursor after command
           inputSpan = null;
           cursorSpan = null;
           runCommand(cmdLine);
-        } else if(e.key.length === 1) {
+        } else if (e.key.length === 1) {
           inputSpan.textContent += e.key;
         }
         scrollBottom();
       }
 
       function boot() {
-        print("jrj.io redirective shell v1.0");
-        print("Type 'help' for a list of commands.");
+        // Add static introductory lines with normal spacing
+        term.innerHTML = `
+jrj.io redirective shell v1.0
+Type 'help' for a list of commands.
+        `;
         newPrompt();
-        typeChars("help", () => {
-          cursorSpan.remove();
-          inputSpan = null;
-          cursorSpan = null;
-          runCommand("help");
-        });
       }
 
       term.addEventListener("click", () => term.focus());
