--- a/static_html/index.html
+++ b/static_html/index.html
@@ -59,6 +59,7 @@
     }
     .clickable { text-decoration: underline; cursor: pointer; }
     a { color: inherit; text-decoration: underline; }
+    .yellowbold { color: #ffcc00; font-weight: bold;}
   </style>
 </head>
 <body>
@@ -82,7 +83,7 @@
         ]),
         what: () => printLines([
           "JRJ's personal link shortener",
-          "Built with Rust 🦀",
+          "Built in Rust <img src='./ferris.png' style='height: 1em;' class='clickable' data-command='rusty'>",
           "Source: https://github.com/jrj/redirective",
           "Type 'help' to explore.",
           " ",
@@ -111,6 +112,17 @@
           "Wally's a good boy!",
           " ",
         ].map(linkify)),
+        rusty: () => printLines([
+          "cargo build --release",
+          "<span class='yellowbold'>Compiling</span> metrics.rs",
+          "<span class='yellowbold'>Compiling</span> main.rs",
+          "<span class='yellowbold'>Compiling</span> http.rs",
+          "<span class='yellowbold'>Compiling</span> git_sync.rs",
+          "<span class='yellowbold'>Compiling</span> errors.rs",
+          "<span class='yellowbold'>Compiling</span> config.rs",
+          "<span class='yellowbold'>Compiling</span> cache.rs",
+          "<span class='yellowbold'>Finished</span> `release` target(s) in 1.23s",
+        ]),
         clear: () => { term.innerHTML = "jrj.io redirective shell v1.0<br>Type 'help' for a list of commands."; newPrompt(); },
         open: (args) => {
           if(args[0]) {
@@ -197,7 +209,11 @@
         if (e.key === "Backspace") {
           inputSpan.textContent = inputSpan.textContent.slice(0, -1);
         } else if (e.key === "Enter") {
-          const cmdLine = inputSpan.textContent;
+          const cmdLine = inputSpan.textContent.trim();
+          if (cmdLine === "") {
+            newPrompt(); // Create a new prompt if no command is entered
+            return;
+          }
           cursorSpan.remove(); // Remove cursor after command
           inputSpan = null;
           cursorSpan = null;
@@ -210,10 +226,7 @@
 
       function boot() {
         // Add static introductory lines with normal spacing
-        term.innerHTML = `
-jrj.io redirective shell v1.0
-Type 'help' for a list of commands.
-        `;
+        term.innerHTML = `jrj.io redirective shell v1.0<br>Type 'help' for a list of commands.`;
         newPrompt();
       }
 
@@ -223,8 +236,14 @@ Type 'help' for a list of commands.
 
       document.addEventListener("click", (e) => {
         const el = e.target.closest(".clickable");
-        if(el) {
-          runCommand(el.dataset.command || el.textContent);
+        if (el) {
+          const command = el.dataset.command || el.textContent;
+          if (command === "rusty") {
+            inputSpan.textContent = "rusty"; 
+            handleKey({ key: "Enter", preventDefault: () => {} }); // Simulate pressing Enter
+          } else {
+            runCommand(command);
+          }
         }
       });
 
