adding green tint to images in static_html/index.html

--- a/static_html/index.html
+++ b/static_html/index.html
@@ -60,6 +60,9 @@
     .clickable { text-decoration: underline; cursor: pointer; color: aqua; }
     a { color: inherit; text-decoration: underline; }
     .yellowbold { color: #ffcc00; font-weight: bold;}
+img {
+  filter: hue-rotate(90deg) saturate(50%); /* Muted green tint */
+}
   </style>
 </head>
 <body>
