fixing link in static html

--- a/static_html/index.html
+++ b/static_html/index.html
@@ -87,7 +87,7 @@ img {
         what: () => printLines([
           "JRJ's personal link shortener",
           "Built in Rust <img src='./ferris.png' style='height: 1em;' class='clickable' data-command='rusty'>",
-          "Source: https://github.com/jrj/redirective",
+          "Source: https://github.com/jrjones/redirective",
           "Type 'help' to explore.",
           " ",
         ].map(linkify)),
